Se agrega validacion de home a login, lista de pokemon y filtro

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,3 +3,7 @@
     role="alert">
     {{successMessage}}
 </div>
+
+<button class="btn btn-primary" type="submit" (click)="logout()">Log Out</button>
+<app-pokefilter></app-pokefilter>
+<app-poketable [pokemonestabla]="pokeService.pokemones"></app-poketable>
